# webdash

./: .gitignore  README.md  definitions.json
data/: WebDash.xml  clone_pull-projects.sh  setup-webdash.sh  webdash-profile.default.json
src/lib/webdash-executor/: CMakeLists.txt  README.md  webdash.config.json
src/lib/webdash-executor/include/: webdash-config-task.hpp  webdash-config.hpp  webdash-core.hpp
src/lib/webdash-executor/src/: webdash-config-task.cpp  webdash-config.cpp  webdash-core.cpp  webdash-utils.cpp
